<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.omninos.Activities.AddVehicleDetailActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/top_toolbar" />


    <RelativeLayout
        android:layout_marginTop="@dimen/dp_30"
        android:id="@+id/relativeLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/dp_10"
            android:text="@string/add_detail_of_vehicle" />

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/relativeLayout4">

        <RelativeLayout
            android:id="@+id/relativeLayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/relativeLayout4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_margin_dp_2"
                    app:cardCornerRadius="@dimen/editTextRedius">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:hint="@string/select_brand"
                        android:padding="12dp"
                        android:singleLine="true" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/card_margin_dp_2"
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_marginRight="@dimen/card_margin_dp_2"
                    app:cardCornerRadius="@dimen/editTextRedius">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:hint="@string/select_model"
                        android:padding="12dp"
                        android:singleLine="true" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/card_margin_dp_2"
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_marginRight="@dimen/card_margin_dp_2"
                    app:cardCornerRadius="@dimen/editTextRedius">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:hint="@string/year"
                        android:padding="12dp"
                        android:singleLine="true" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/card_margin_dp_2"
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_marginRight="@dimen/card_margin_dp_2"
                    app:cardCornerRadius="@dimen/editTextRedius">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:hint="@string/color"
                        android:padding="12dp"
                        android:singleLine="true" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/card_margin_dp_2"
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_marginRight="@dimen/card_margin_dp_2"
                    app:cardCornerRadius="@dimen/editTextRedius">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:hint="@string/interior_color"
                        android:padding="12dp"
                        android:singleLine="true" />

                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/btn_continue_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/gradient_button1"
                    android:text="@string/continue_name"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

            </LinearLayout>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>
