<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.Activities.RegisterActivity">

    <include layout="@layout/back_arrow"/>

    <include
        android:id="@+id/logo"
        layout="@layout/app_logo" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo">

        <RelativeLayout
            android:id="@+id/relativeLayout3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <androidx.cardview.widget.CardView
                    android:id="@+id/cardview1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="@dimen/card_view_margin_left"
                    android:layout_marginRight="@dimen/card_view_margin_right"
                    android:elevation="5dp"
                    app:cardBackgroundColor="@color/card_bg_color"
                    app:cardCornerRadius="@dimen/cardCornerRadius"
                    app:cardPreventCornerOverlap="false"
                    app:cardUseCompatPadding="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:id="@+id/linearLayout1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="@dimen/padding_inside_card_view">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:padding="8dp"
                                android:text="@string/register_header_name"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/padding_title_text"
                                android:text="@string/username"
                                android:textStyle="bold" />

                            <androidx.cardview.widget.CardView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/card_margin_dp_2"
                                app:cardCornerRadius="@dimen/editTextRedius">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="center_vertical"
                                    android:orientation="horizontal"
                                    android:padding="@dimen/layout_padding">

                                    <ImageView
                                        android:id="@+id/email_icon"
                                        android:layout_width="30dp"
                                        android:layout_height="30dp"
                                        android:paddingTop="@dimen/icon_padding_top"
                                        android:src="@drawable/user" />

                                    <EditText
                                        android:id="@+id/username"
                                        android:singleLine="true"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:background="@color/white"
                                        android:hint="@string/username_hint"
                                        android:padding="@dimen/layout_padding" />

                                </LinearLayout>

                            </androidx.cardview.widget.CardView>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/padding_title_text"
                                android:text="@string/user_phone"
                                android:textStyle="bold" />

                            <androidx.cardview.widget.CardView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/card_margin_dp_2"
                                app:cardCornerRadius="@dimen/editTextRedius">


                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="center_vertical"
                                    android:orientation="horizontal"
                                    android:padding="@dimen/layout_padding">

                                    <ImageView
                                        android:id="@+id/telephone_icon"
                                        android:layout_width="30dp"
                                        android:layout_height="30dp"
                                        android:paddingTop="@dimen/icon_padding_top"
                                        android:src="@drawable/telephone_of_old_design" />

                                    <EditText
                                        android:singleLine="true"
                                        android:id="@+id/user_phone_no"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:background="@color/white"
                                        android:hint="@string/user_phone_hint"
                                        android:inputType="numberPassword"
                                        android:padding="@dimen/layout_padding" />

                                </LinearLayout>

                            </androidx.cardview.widget.CardView>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/padding_title_text"
                                android:text="@string/email"
                                android:textStyle="bold" />

                            <androidx.cardview.widget.CardView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/card_margin_dp_2"
                                app:cardCornerRadius="@dimen/editTextRedius">


                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="center_vertical"
                                    android:orientation="horizontal"
                                    android:padding="@dimen/layout_padding">

                                    <ImageView
                                        android:id="@+id/message_icon"
                                        android:layout_width="30dp"
                                        android:layout_height="30dp"
                                        android:paddingTop="@dimen/icon_padding_top"
                                        android:src="@drawable/email" />

                                    <EditText
                                        android:singleLine="true"
                                        android:id="@+id/email_address"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:background="@color/white"
                                        android:hint="@string/email_hint"
                                        android:padding="@dimen/layout_padding" />

                                </LinearLayout>

                            </androidx.cardview.widget.CardView>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/padding_title_text"
                                android:text="@string/password"
                                android:textStyle="bold" />

                            <androidx.cardview.widget.CardView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/card_margin_dp_2"
                                app:cardCornerRadius="@dimen/editTextRedius">


                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="center_vertical"
                                    android:orientation="horizontal"
                                    android:padding="@dimen/layout_padding">

                                    <ImageView
                                        android:id="@+id/password_icon"
                                        android:layout_width="30dp"
                                        android:layout_height="30dp"
                                        android:paddingTop="@dimen/icon_padding_top"
                                        android:src="@drawable/lock" />

                                    <EditText
                                        android:singleLine="true"
                                        android:id="@+id/user_password"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:background="@color/white"
                                        android:hint="@string/user_phone_hint"
                                        android:inputType="numberPassword"
                                        android:padding="@dimen/layout_padding" />

                                </LinearLayout>

                            </androidx.cardview.widget.CardView>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/padding_title_text"
                                android:text="@string/conform_password"
                                android:textStyle="bold" />

                            <androidx.cardview.widget.CardView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/card_margin_dp_2"
                                app:cardCornerRadius="@dimen/editTextRedius">


                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="center_vertical"
                                    android:orientation="horizontal"
                                    android:padding="@dimen/layout_padding">

                                    <ImageView
                                        android:id="@+id/password_icon1"
                                        android:layout_width="30dp"
                                        android:layout_height="30dp"
                                        android:paddingTop="@dimen/icon_padding_top"
                                        android:src="@drawable/lock" />

                                    <EditText
                                        android:singleLine="true"
                                        android:id="@+id/user_conform_password"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:background="@color/white"
                                        android:hint="@string/user_phone_hint"
                                        android:inputType="numberPassword"
                                        android:padding="@dimen/layout_padding" />

                                </LinearLayout>

                            </androidx.cardview.widget.CardView>

                            <Button
                                android:id="@+id/register_btn"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/top_margin_register_btn"
                                android:layout_marginBottom="20dp"
                                android:background="@drawable/gradient_button2"
                                android:text="@string/register_button"
                                android:textColor="@color/white"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/relativeLayout2"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_login_hint" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="@color/lightblue" />

            </LinearLayout>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>